--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         // Dimensões da imagem
         const bounds = [[0, 0], [1500, 1500]]; // Altere para o tamanho da sua imagem
-        const image = L.imageOverlay('Mapa.png', bounds).addTo(map);
+        const image = L.imageOverlay('Mapa2.png', bounds).addTo(map);
 
         map.fitBounds(bounds); // Centraliza o mapa na imagem
     </script>
